--- a/week04.adoc
+++ b/week04.adoc
@@ -13,11 +13,11 @@ Lecture topics:
 * Hermite splines
 
 link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ff38c2c1-c345-48ac-9925-adaa013ff422[Lecture 9/21/2021], link:Notes/Lecture07-9.21.2021.pdf[Notes]
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=10e86795-0fd2-446a-bd41-adac015653a0[Lecture 9/23/2021], link:Notes/Lecture08-9.23.2021.psd[Notes]
 
 Additional resources and demos:
 
 * Parent Sections 3.1, 3.2, 4.1, B.5.1, B.5.2, B.5.5., B.5.6 
 * Lengyel: 11.1-11.4
-* Solving equations using Eigen: link:Labs/solveEqn.cpp.txt[Example1]/link:Labs/hermiteEx.cpp.txt[Example2]
-* Spline Example: link:CatmullRomExample.pdf[Catmull-Rom]/link:HermiteExample.pdf[Hermite]
+* Solving equations using Eigen: link:https://github.com/alinen/animation-toolkit/blob/main/classexamples/week03-solveEqn.cpp[Solve and equation with Eigen]/link:https://github.com/alinen/animation-toolkit/blob/main/classexamples/week03-hermiteEx.cpp[Solve for Hermite slopes using Eigen]
 * Hermite endpoint conditions: link:Labs/hermiteClamped.gif[Clamped]/link:Labs/hermiteNatural.gif[Natural] 
