--- a/index.adoc
+++ b/index.adoc
@@ -12,7 +12,7 @@ include::header.adoc[]
 [.anns]
 == Announcements
 * link:asst03-splines.html[Assignment 03] due Oct 1, midnight
-* link:Q1Guide.html[Quiz1 Study Guide] *Quiz 1* in class, 30 min, September 28th
+* link:Q2Guide.html[Quiz2 Study Guide] *Quiz 2* in lab, 30 min, October 7
 * *Lab Worksheet* link:week04-lab-splines.html[Catmull-ROM and Hermite splines]: *Due Sept 30th, in class* 
 
 == **Schedule**
