--- a/index.adoc
+++ b/index.adoc
@@ -11,9 +11,8 @@ include::header.adoc[]
 
 [.anns]
 == Announcements
-* link:asst03-splines.html[Assignment 03] due Oct 1, midnight
-* link:Q1Guide.html[Quiz1 Study Guide] *Quiz 1* in class, 30 min, September 28th
-* *Lab Worksheet* link:week04-lab-splines.html[Catmull-ROM and Hermite splines]: *Due Sept 30th, in class* 
+* *Assignment 05:* link:asst05-quat.html[Quazy Quaternions]: *Due Oct 22*
+* *Lab (Quaternions):* link:week08-quat-worksheet.html[Quaternions Worksheet]: *Due Oct 21*
 
 == **Schedule**
 
