--- a/schedule.adoc
+++ b/schedule.adoc
@@ -46,7 +46,7 @@ Catmull-Rom splines. Hermite Splines.
 
 * link:week04.html[Lecture notes and resources]
 * *Lab Worksheet* link:week04-lab-splines.html[Catmull-ROM and Hermite splines]: *Due Sept 30th, in class* 
-* *Assignment 03:* link:Labs/asst03-spline.html[The Catmull-Rom Com]: *Due Oct 1, midnight*
+* *Assignment 03:* link:asst03-splines.html[The Catmull-Rom Com]: *Due Oct 1, midnight*
 
 //-----------------------------
 |5
@@ -57,7 +57,8 @@ Rotations. Matrices. Euler angles. Gimbol lock.
 
 * *Sept 28* Quiz1 link:Q1Guide.html[Quiz1 Study Guide]: Math preliminaries and first animations
 * link:week05.html[Lecture notes and resources]
-//* *Assignment 04:* link:Labs/lab4-rotations.html[You spin me round]: *Due Oct 7*
+* link:week05-lab-euler.html[Euler angle practice]
+* *Assignment 04:* link:asst04-euler.html[You spin me round]: *Due Oct 8*
 
 //-----------------------------
 |6
@@ -68,7 +69,7 @@ General angle-axis rotations. Quaternions.  Slerp. Interpolating rotations
 
 * *Oct 7* Quiz2 link:Q2Guide.html[Quiz2 Study Guide]: Interpolation and splines
 * link:week06.html[Lecture notes and resources]
-//* *Assignment 05:* link:Labs/lab5-quat.html[Quazy Quaternions]: *Due Oct 21 (after fall break)*
+* *Assignment 05:* link:Labs/lab5-quat.html[Quazy Quaternions] *Due Oct 21 (after fall break)*
 
 //-----------------------------
 |7
@@ -86,6 +87,7 @@ General angle-axis rotations. Quaternions.  Slerp. Interpolating rotations
 Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints
 
 * Lengyel Chpt 4, Parent Chpt 2
+* *Lab (Quaternions):* link:week08-quat-worksheet.html[Quaternions Worksheet]: *Due Oct 21*
 //* *Assignment 06:* link:Labs/lab6-fk.html[Building character]: *Due Oct 28*
 
 //-----------------------------
