--- a/week09-xform-worksheet.adoc
+++ b/week09-xform-worksheet.adoc
@@ -30,7 +30,7 @@ global Z axis.
 * The position of B2 with respect to the world is \( p_2 = (4, 0, 2)^T \). The rotation of B2 with respect to the world is 45 degrees around the Z axis.
 * The position of B3 with respect to the world is \( p_3 = (5, 4, 2)^T \). The rotation of B3 with respect to the world is 90 degrees around the Z axis.
 
-image::boxes-2019.png[width=200px]
+image::Labs/boxes-2019.png[width=400px]
 
 In your assignment for this week, you will implement the solutions of the following questions. 
 In this worksheet, you will manually solve for the transforms corresponding to the above picture. 
@@ -52,8 +52,8 @@ In this worksheet, you will manually solve for the transforms corresponding to t
 {nbsp} +
 {nbsp} +
 
-* What is the position of B2 relative to the local coordinate system attached to box B1? Express your answer as a 4x1 homogeneous coordinate.
 
+* If a transform \( F_j^i \) transforms from frame j to frame i. The inverse stem:[(F_j^i)^{-1} = F_i^j] transforms from frame i to frame j. Use this fact to compute the transform from frame 2 to frame 1. You implementation should use \( F_1^0 \) and \(F_2^0 \).  What is the position of B2 relative to the local coordinate system attached to box B1? Express your answer as a 4x1 homogeneous coordinate.
 
 {nbsp} +
 {nbsp} +
@@ -86,7 +86,10 @@ In this worksheet, you will manually solve for the transforms corresponding to t
 {nbsp} +
 {nbsp} +
 
-* What is the transformation matrix that stacks B2 onto B1?
+* Transforms can be interpreted as (1) conversions between frames of reference, or (2) modifications on an object. Consider Box 2. Suppose we wish to move it from its current location and orientation so it stacks on top of B1. Compute a series of transformations that achieves this result 
+and then multiply them together to find the transformation matrix that stacks B2 onto B1.
+
+image::Labs/boxes-2021.png[]
 
 {nbsp} +
 {nbsp} +
