--- a/index.adoc
+++ b/index.adoc
@@ -11,8 +11,7 @@ include::header.adoc[]
 
 [.anns]
 == Announcements
-* *Assignment 06:* link:asst06-transform.html[Building character]: *Due Oct 29*
-* *Lab (Transforms):* link:week09-xform-worksheet.html[Transformation Worksheet]: *Extension: Due Nov 2*
+* *Assignment 07:* link:asst07-motion.html[Motion]: *Due Nov 5*
 * *Quiz 3 (Nov 4)*
 
 == **Schedule**
