--- a/index.adoc
+++ b/index.adoc
@@ -12,7 +12,7 @@ include::header.adoc[]
 [.anns]
 == Announcements
 * *Assignment 07:* link:asst07-motion.html[Motion]: *Due Nov 5*
-* *Quiz 3 (Nov 4)*
+* *Quiz 3 (Nov 4): Rotations*, 30 minutes, in lab (link:Q3Guide.html[Quiz3 Study Guide])
 
 == **Schedule**
 
